# k-and-r

./: .gitignore  1-1.c  1-10.c  1-12.c  1-14.c  1-16.c  1-19.c  1-2.c  1-20.c  1-20.in  1-21.in  1-3.c  1-5.c  1-6.c  1-8.c  1-9.c  CMakeLists.txt  readme.md
1-11/: 3  5
src/: 1-11.c  1-11.in  1-13.c  1-15.c  1-17.c  1-18.c  1-2.c  1-21.c  1-22.c  1-4.c  1-7.c
src/1-11/: 6  7
